Layout abd route

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,8 @@
-<h1>Sample App</h1>
-<p>
-  C'est la page d'accueil de l'Application Exemple du
-  <a href="http://railstutorial.org/">Tutoriel Ruby on Rails</a>.
-  <%= link_to "S'inscrire", "#",:class => "signup_button round" %>
-</p>
+<hr><div class="jumbotron">
+	<h1>Sample App</h1>
+	<p>
+	  C'est la page d'accueil de l'Application Exemple du
+	  <a href="http://railstutorial.org/">Tutoriel Ruby on Rails</a>.
+	  <%= link_to "S'inscrire", "#",:class => "signup_button round" %>
+	</p>
+</div>
