--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,11 +1,10 @@
-<header>
-  <% logo = image_tag("logo.png", :alt => "logo", :class => "round") %>
-  <%=link_to logo, root_path %>
-  <nav class="round">
-    <ul>
-      <li><%= link_to "Accueil", root_path %></li>
-      <li><%= link_to "Aide", help_path %></li>
-      <li><%= link_to "Connexion", signup_path %></li>
-    </ul>
-  </nav>
+<header>  
+   <nav>
+        <ul class="nav nav-pills pull-right">
+            <li role="presentation" class="active"><%= link_to "Accueil", root_path %></li>
+            <li role="presentation"><%= link_to "Aide", help_path %></li>
+            <li role="presentation"><%= link_to "Connexion", signup_path %></li>
+        </ul>
+         <%=link_to logo, root_path %>
+    </nav>
 </header>
