--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
-<h1>About Us</h1>
+<hr><div class="jumbotron">
+<h1>A propos</h1>
 <p>
-  <a href="http://railstutorial.org/">Ruby on Rails Tutorial</a>
-  est un projet de livre et de screencasts pour apprendre le développement web
-  avec <a href="http://rubyonrails.org/">Ruby on Rails</a>. C'est l'Application Exemple de ce tutoriel.
+  Petit test avec Ruby on rails \*o*/
 </p>
+</div>
