--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,17 @@
 <hr><div class="jumbotron">
-<%= @user.nom %>, <%= @user.email %>
+<div class="container">
+	<div class="row">
+		<div class="col-md-6">
+			<%= gravatar_for @user %>			
+		</div>
+		<div class="col-md-6">
+			<div class="col-md-offset-6">
+				<p>Nom:<%= @user.nom %></p>  
+				<p><%= link_to "Profil", user_path(@user) %></p> 
+			</div>
+		</div>
+	</div>
+</div>
+
+
 </div>
