--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,9 @@
     <div class="container">
       <%= render 'layouts/header' %>
       <section class="round">
+      <% flash.each do |key, value| %>
+          <div class="alert alert-success <%= key %>"><%= value %></div>
+        <% end %><hr>
         <%= yield %>
       </section>
       <%= render 'layouts/footer' %>
