--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<hr><div class="jumbotron">
+<div class="jumbotron">
 	<h1>Sample App</h1>
 	<p>
 	  C'est la page d'accueil de l'Application Exemple du
