--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,7 @@
+<div class="jumbotron">
 <h1>Inscription</h1>
 <%= form_for(@user) do |f| %>
+<%= render 'shared/error_messages' %>
 <div class="form-group">
 	<label for="exampleInputName"><%= f.label :nom %></label>
 		<%= f.text_field :nom, :class => "form-control" %>
@@ -20,3 +22,4 @@
     <%= f.submit "Inscription" %>
 </button>
 <%end%>
+</div>
