--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,7 +3,11 @@
         <ul class="nav nav-pills pull-right">
             <li role="presentation" class="active"><%= link_to "Accueil", root_path %></li>
             <li role="presentation"><%= link_to "Aide", help_path %></li>
-            <li role="presentation"><%= link_to "Connexion", signup_path %></li>
+            <% if signed_in? %>
+			    <li><%= link_to "Déconnexion", signout_path, :method => :delete %></li>
+			    <% else %>
+			    <li><%= link_to "S'identifier", signin_path %></li>
+		    <% end %>
         </ul>
          <%=link_to logo, root_path %>
     </nav>
