--- a/app/views/shared/_error_messages.html.erb
+++ b/app/views/shared/_error_messages.html.erb
@@ -1,10 +1,11 @@
-<% if @user.errors.any? %>
-  <div class="alert alert-danger" role="alert">
-    <h3><%= pluralize(@user.errors.count, "erreur") %> 
-        ont empêché d'enregistrer votre inscription !</h3>
-    <p>Merci de corriger ces champs :</p>
-    <ul id="errors">
-    <% @user.errors.full_messages.each do |msg| %>
+<% if object.errors.any? %>
+  <div id="error_explanation">
+    <h2><%= pluralize(object.errors.count, "error") %> 
+        prohibited this <%= object.class.to_s.underscore.humanize.downcase %> 
+        from being saved:</h2>
+    <p>There were problems with the following fields:</p>
+    <ul>
+    <% object.errors.full_messages.each do |msg| %>
       <li><%= msg %></li>
     <% end %>
     </ul>
