--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="jumbotron">
-<h1>Inscription</h1>
+<h1>Editer un profil</h1>
 <%= form_for(@user) do |f| %>
-<%= render 'shared/error_messages', :object => f.object %>
+<%= render 'shared/error_messages',:object => f.object %>
 <div class="form-group">
 	<label for="exampleInputName"><%= f.label :nom %></label>
 		<%= f.text_field :nom, :class => "form-control" %>
@@ -19,7 +19,11 @@
     <%= f.password_field :password_confirmation, :class => "form-control" %>
 </div>
 <button type="submit" class="btn btn-default">
-    <%= f.submit "Inscription" %>
+    <%= f.submit "Modifier" %>
 </button>
 <%end%>
+<div>
+  <%= gravatar_for @user %>
+  <a href="http://gravatar.com/emails">changer</a>
+</div>
 </div>
