--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,30 @@
 <div class="jumbotron">
-	<h1>Sample App</h1>
-	<p>
-	  C'est la page d'accueil de l'Application Exemple du
-	  <a href="http://railstutorial.org/">Tutoriel Ruby on Rails</a>.
-	  <%= link_to "S'inscrire", "#",:class => "signup_button round" %>
-	</p>
+	<% if signed_in? %>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-9">
+				<h2 class="micropost">Quoi de neuf ?</h2>
+				<%= render 'shared/micropost_form' %>
+			</div> 
+			<div class="col-md-3">     
+				<%= render 'shared/user_info' %>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<%= render 'shared/feed' %>
+			</div> 
+		</div>
+	</div>    
+</div>
+<% else %>
+<h2>Sample App</h2>
+<p>
+	C'est la page d'accueil de l'Application Exemple du
+	<a href="http://railstutorial.org/">Tutoriel Ruby on Rails</a>.
+	<%= link_to "S'inscrire", "#",:class => "signup_button round" %>
+</p>
+<% end %>
 </div>
