--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -8,6 +8,7 @@
 			</div> 
 			<div class="col-md-3">     
 				<%= render 'shared/user_info' %>
+				<%= render 'shared/stats' %>
 			</div>
 		</div>
 	</div>
@@ -24,7 +25,8 @@
 <p>
 	C'est la page d'accueil de l'Application Exemple du
 	<a href="http://railstutorial.org/">Tutoriel Ruby on Rails</a>.
-	<%= link_to "S'inscrire", "#",:class => "signup_button round" %>
+	<%= link_to "S'inscrire", signup_path,:class => "signup_button round" %>
+
 </p>
 <% end %>
 </div>
